fix: ChannelToolAichatController.personas() 使用原始 globalRepoIds